<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhFinder</string>
    <string name="application_logo">Duplicate Photo Finder</string>
    <string name="comparison_severity">Comparison sevetiry</string>
    <string name="adjust_similarity_prompt">Drag to adjust similarity</string>
    <string name="one_event_title">One event</string>
    <string name="quite_similar_title">Quite similar</string>
    <string name="identical_title">Identical</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Remove selected duplicates</string>
    <string name="thumbnailContentDescription">thumbnail of a real photo</string>
    <string name="scan_suggestion_message">Where to scan</string>
    <string name="system_folder_scanning_button">System folder</string>
    <string name="entire_device_scanning_button">Entire device</string>
    <string name="browse_scanning_button">Browse</string>
    <string name="suggestion_view">suggestion_view</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Send message</string>
    <string name="title_activity_photo_list">PhotoListActivity</string>
    <string name="title_activity_suggestion_list"></string>
    <string name="find_similar_photos">Find Similar Photos</string>
    <string name="thumbnail_description">Gallery photo</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="progress_bar_message">Galery scanning...</string>

</resources>
